# os0-kernel

./: .gitattributes  .gitignore  kconfig.h.in  meson.build  meson_options.txt
arch/i386/: features.S  features.c  gdt-load.S  gdt.c  halt.S  irq.inc  isr.S  isr.c  memchr.S  memcpy.S  meson.build  paging.c  pic.c  random.S  read-ip.S  rtc.c  syscall.S  task.S  task.c  timer.c  tlb-flush.S  tss.S  user.S
config/: grub.cfg  kernel-gdb.py  printers.py
contrib/printers/: ext2.py  load.py  util.py
drivers/: acpi.c  ata-bio.c  ata.c  atapi.c  device.c  kbd.c  meson.build  pci.c  pcspk.c  serial.c  terminal.c  tty-line.c  vga-dev.c  vga.c  vt100.c
fs/: devfs.c  ext2-inode.c  ext2-util.c  ext2.c  ext4-mmp.c  fsguess.c  meson.build  namei.c  path.c  perm.c  pipe.c  vfs.c
fs/ext2/: bitarray.c  bitmap.c  bmap.c  extent.c  inode.c  link.c  meson.build  mmp.c  super.c  util.c
include/: assert.h  byteswap.h  ctype.h  dirent.h  endian.h  endian.h.in  errno.h  fcntl.h  limits.h  meson.build  stdio.h  stdlib.h  string.h  termios.h  time.h  unistd.h
include/bits/: dirent.h  errlist.h  ioctl.h  meson.build  mman.h  mount.h  random.h  resource.h  signal.h  stat.h  statfs.h  statvfs.h  syscall.h  sysconf.h  termios.h  time.h  times.h  tty.h  uio.h  unistd.h  utime.h  utsname.h  wait.h  xattr.h
include/bits/types/: fsid.h  meson.build  stat.h  statvfs.h  tm.h
include/fs/: devfs.h  ext2.h  pipe.h  vfs.h
include/i386/: features.h  gdt.h  paging.h  pic.h  timer.h  tss.h
include/libk/: array.h  compile.h  hash.h  libk.h  macros.h  math.h  random.h  stack.h  stdio.h  stdlib.h  string.h  time.h  types.h  util.h
include/sys/: acpi.h  ata.h  cdefs.h  cmdline.h  cmos.h  device.h  errno.h  fcntl.h  io.h  ioctl.h  kbd.h  memory.h  meson.build  mount.h  multiboot.h  namei.h  param.h  pci.h  process.h  reboot.h  resource.h  rtld.h  signal.h  stat.h  statfs.h  statvfs.h  syscall.h  syslimits.h  syslimits.h.in  sysmacros.h  task.h  time.h  timer.h  times.h  tty.h  types.h  unistd.h  wait.h
include/video/: serial.h  vga.h
include/vm/: heap.h  paging.h
kernel/: boot-i386.S  boot.S  fcntl.c  fork.S  heap.c  ioctl.c  linker.ld  main.c  memory.c  meson.build  process.c  rtld.c  syscall.c  systab.c  wait.c
libk/: array.c  atoi.c  bitsearch.c  crc16.c  crc32.c  ctype.c  filesize.c  itoa.c  low-abort.c  memcmp.S  memcpy.S  memmove.S  memset.S  meson.build  panic.c  pregs.S  printk.c  qsort.c  random.c  sha256.c  signal.c  stack.c  strdup.c  string.c
subprojects/os0-kernel/: kconfig.h.in  meson.build
subprojects/os0-kernel/arch/i386/: dt-load.S  gdt.c  halt.S  irq.inc  isr.S  isr.c  meson.build  paging.S  paging.c  pic.c  timer.c  tlb-flush.S
subprojects/os0-kernel/arch/x86/: meson.build  paging.c
subprojects/os0-kernel/drivers/: meson.build  vga.c  vga.h
subprojects/os0-kernel/include/i386/: gdt.h  paging.h  pic.h  timer.h
subprojects/os0-kernel/include/libk/: array.h  assert.h  libk.h  stdio.h  stdlib.h  string.h  types.h
subprojects/os0-kernel/include/sys/: cdefs.h  heap.h  io.h  memory.h  multiboot.h  types.h
subprojects/os0-kernel/include/video/: vga.h
subprojects/os0-kernel/include/vm/: heap.h  paging.h
subprojects/os0-kernel/kernel/: _boot.S  boot.S  boot.s  heap.c  linker.ld  main.c  memory.c  meson.build  paging.c
subprojects/os0-kernel/libk/: array.c  bitsearch.c  itoa.c  meson.build  panic.c  printk.c  qsort.c  string.c
syscall/: id.c  meson.build  misc.c  mman.c  relvfs.c  signal.c  table.c  time.c  util.c  vfs.c  xattr.c
test/: main.c  meson.build  sha256.c  start.S  test-driver.c  test.h  testlink.ld
uapi/: fork.S  id.c  meson.build  misc.c  mman.c  relvfs.c  signal.c  table.c  time.c  util.c  vfs.c
