libk_src = [
  'array.c',
  'atoi.c',
  'bitsearch.c',
  'crc16.c',
  'crc32.c',
  'ctype.c',
  'itoa.c',
  'low-abort.c',
  'memcmp.S',
  'memcpy.S',
  'memmove.S',
  'memset.S',
  'panic.c',
  'pregs.S',
  'printk.c',
  'qsort.c',
  'random.c',
  'sha256.c',
  'signal.c',
  'stack.c',
  'string.c'
]

libk = static_library('k', libk_src, include_directories: includedir)
